--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
      <div class="content">
         <div class="column col-left reveal">
         <div class="img-card">
-          <img src="" alt="">  
+          <img src="img/download.jpg" alt="">  
         </div>
         </div>
         <div class="column col-right reveal">
@@ -153,32 +153,32 @@
 <div class="content">
     <div class="card reveal">
         <div class="card-img">
-            <img src="work1.jpg" alt="">
+            <img src="img/work1.jpg" alt="">
         </div>
     </div>
     <div class="card reveal">
         <div class="card-img">
-            <img src="work2.jpg" alt="">
+            <img src="img/work2.jpg" alt="">
         </div>
     </div>
     <div class="card reveal">
         <div class="card-img">
-            <img src="work3.jpg" alt="">
+            <img src="img/work3.jpg" alt="">
         </div>
     </div>
     <div class="card reveal">
         <div class="card-img">
-            <img src="work4.jpg" alt="">
+            <img src="img/work4.jpg" alt="">
         </div>
     </div>
     <div class="card reveal">
         <div class="card-img">
-            <img src="work5.jpg" alt="">
+            <img src="img/work5.jpg" alt="">
         </div>
     </div>
     <div class="card reveal">
         <div class="card-img">
-            <img src="work6.jpg" alt="">
+            <img src="img/work6.jpg" alt="">
         </div>
     </div>
     <div class="title reveal">
